ADD_LIBRARY (atomic_mutex atomic_mutex.cc)
TARGET_INCLUDE_DIRECTORIES (atomic_mutex PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
SET (SPINLOOP 50 CACHE STRING "Spinloop count (0 to disable)")
IF (${SPINLOOP} GREATER 0)
  TARGET_COMPILE_DEFINITIONS (atomic_mutex PRIVATE SPINLOOP=${SPINLOOP})
ENDIF()

IF (CMAKE_CXX_STANDARD GREATER_EQUAL 20)
  TARGET_COMPILE_FEATURES (atomic_mutex PUBLIC cxx_std_11)
ENDIF()
